# chemsmart

./: .flake8  .geminirules  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  10a.xyz  10a_A_opt.com  10a_A_sp.com  10a_HA_opt.com  10a_HA_sp.com  10a_HRef_opt.com  10a_HRef_sp.com  10a_Ref_opt.com  10a_Ref_sp.com  1a.xyz  1a_A_opt.com  1a_A_sp.com  1a_HA_opt.com  1a_HA_sp.com  1a_HRef_opt.com  1a_HRef_sp.com  1a_Ref_opt.com  1a_Ref_sp.com  2a.xyz  2a_A_opt.com  2a_A_sp.com  2a_A_sp.err  2a_HA_opt.com  2a_HA_sp.com  2a_HRef_opt.com  2a_HRef_sp.com  2a_Ref_opt.com  2a_Ref_sp.com  3a.xyz  3a_A_opt.com  3a_A_sp.com  3a_HA_opt.com  3a_HA_sp.com  3a_HRef_opt.com  (+176 more)
.clinerules/: 00-mission-and-memory-bank.md  01-safety-invariants.md  02-accumulation-workflow.md  03-dataset-quality-gates.md  04-cli-ground-truth.md  05-project-conventions.md
.cursor/commands/: review.md
.cursor/rules/: 00-project-core.mdc
.github/: release_message.sh  rename_project.sh
.github/workflows/: main.yml  release.yml
chemsmart/: __init__.py  __main__.py  base.py  cli.py  ct2.py  ct_test.py  ct_test2.py
chemsmart/agent/: README.md  __init__.py  behavior_rules.py  cli.py  cli_commands.py  cli_schema.py  command_answerer.py  command_models.py  compact_cli_schema.py  core.py  decision_events.py  error_summary.py  handles.py  kind_disambiguator.py  loop.py  model_command_parser.py  models.py  permissions.py  postprocess_v8.py  project_protocol.py  project_yaml.py  project_yaml_rules.py  project_yaml_values.py  provider_adapter.py  provider_config.py  providers.py  registry.py  schema_prune.py  serialization.py  synthesis.py  tool_protocol.py  tools.py  tools_command.py  tools_fs.py  tools_hpc.py  training_log.py  transport.py  v8_adapter.py  v8_kind_index.py
chemsmart/analysis/: algorithm.py  dias.py  iterate.py  thermochemistry.py
chemsmart/assembler/: __init__.py  assemble.py  assembler.py  base.py  database.py  export.py  gaussian.py  inspect.py  orca.py  provenance.py  query.py  records.py  single.py  utils.py
chemsmart/calculators/: __init__.py  xtb.py
chemsmart/chatbot/: __init__.py  chatbot.py  executor.py  llm.py  llm_trainer.py  llm_trainer_ds.py  logger.py
chemsmart/cli/: __init__.py  chat.py  chemsmart  cli.py  config.py  convert.py  gaussian.py  job.py  jobrunner.py  logger.py  main.py  orca.py  pka.py  pka_helpers.py  run.py  sub.py  subcommands.py  update.py
chemsmart/database/: __init__.py  assemble.py  database.py  export.py  inspect.py  query.py  utils.py
chemsmart/io/: converter.py  database.py  datasets.py  file.py  folder.py  organizer.py  yaml.py
chemsmart/jobs/: __init__.py  batch.py  batch_manifest.py  job.py  runner.py  settings.py  writer.py
chemsmart/scripts/: cube_operation.py  file_converter.py  file_organizer.py  file_visualizer.py  fmo.py  fukui.py  generate_isotope_data.py  get_thermochemistry.py  get_thermochemsitry.py  gromacs_topology_demo.py  hirshfeld.py  mulliken.py  plot_dias.py  render_structure_styles.py  structure_filter.py  submit_jobs.py  toxyz.py  wbi_analysis.py  write_xyz.py
chemsmart/settings/: executable.py  executables.py  gaussian.py  gromacs.py  orca.py  scheduler.py  server.py  submitters.py  user.py  workspace_project.py  xtb.py
chemsmart/utils/: cli.py  cluster.py  constants.py  datasets.py  generate_isotope_data.py  geometry.py  grouper.py  groupers.py  io.py  isotopes.txt  isotopes_data.py  iterate.py  logger.py  mixins.py  periodictable.py  references.py  repattern.py  units.py  utils.py
docs/: agent-current-status.md  agent-quickstart.md  agent-tui.md  agent-v13_1-local-adapter.md  gromacs_prepared_em_demo.md  installation-troubleshooting.md  pka-main-batch-architecture-review.md  requirements.txt
docs/design/: agent_tui.md
docs/ops/: chemnode-pbs-provisioning.md  chemnode-slurm-provisioning.md  wizard-validation-status.md
docs/research/: ui_claude_code.md  ui_codex.md
docs/review/: agent-architecture-baseline.json  agent-contract-baseline.md  agent-maintainability-audit.md  agent-provenance-audit.json  agent-provenance-audit.md  agent-provenance-manual-review.md  agent-simplification-completion.md  wizard_chemist_review.md  wizard_engineering_review.md  wizard_hpc_compatibility_audit.md  wizard_vision_review.md
docs/source/: Installation.rst  Introduction.rst  Tutorials.rst  chemdraw-organometallic.rst  chemsmart.cli.gaussian.rst  chemsmart.cli.mol.rst  chemsmart.cli.orca.rst  chemsmart.cli.rst  chemsmart.jobs.gromacs.rst  chemsmart.rst  chemsmart.settings.rst  cli-overview.rst  conf.py  configuration-overview.rst  configuration-project-settings.rst  configuration-server-settings.rst  configuration-test.rst  configuration-user-settings.rst  configuration_makeconfiguration.rst  configuration_setupserverconfigurationonthecluster.rst  configuration_setuptheprojectsettings.rst  configuration_setupusersettings.rst  configuration_test.rst  database-assemble.rst  database-export.rst  database-inspect.rst  database-overview.rst  database-query.rst  (+92 more)
examples/: aspirin.xyz  product.xyz  radical.xyz
group_result/: IRMSDGrouper_T0.125.xlsx  SpyRMSDGrouper_T0.5.xlsx
memory-bank/: activeContext.md  progress.md  projectbrief.md
scripts/: agent_v13_1_stress_colab.py  eval_synthesis.py
site/: 404.html  index.html  search.html
tests/: GaussianGenECPTest.py  GaussianIOTest.py  GaussianSettingsTest.py  GaussianUtilsTest.py  GaussianWriterTest.py  MoleculesTest.py  ORCAIOTest.py  ServerTest.py  StructuresTest.py  UtilsTest.py  WriterTest.py  YAMLIOTest.py  conftest.py  descriptors_2d.py  descriptors_3d.py  test.sdf  test_CLI.py  test_Chatbot.py  test_GaussianExternal.py  test_GaussianGenECP.py  test_GaussianIO.py  test_GaussianJobs.py  test_GaussianSettings.py  test_GaussianWriter.py  test_NCIPLOTWriter.py  test_NCIPLOT_pathfix.py  test_ORCAIO.py  test_ORCANEBJobSettings.py  test_ORCAWriter.py  test_PyMOLJobs.py  test_Structures.py  test_Utils.py  test_XTBGaussian.py  test_XTBIO.py  test_YAMLIO.py  test_base.py  test_batch_cli_rewrite.py  test_batch_manifest.py  test_boltzmann_job_unit.py  test_cluster.py  (+84 more)
(+1163 files in other folders)
