[build-system]
requires = ["setuptools>=70.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemsmart"
version = "0.1.0"  # Update this dynamically if needed
description = "CHEMSMART: Chemistry Simulation and Modeling Automation Toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "xinglong-zhang", email = "xinglong.zhang@cuhk.edu.hk" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ase~=3.23.0b1",
    "click~=8.1.8",
    "torchani",
    "basis-set-exchange",
    "pytest~=7.4.3",
    "numpy~=1.25.2",
    "setuptools~=70.1.1",
    "rdkit~=2023.09.2",
    "crest",
    "yaml~=0.2.5",
    "pyyaml~=6.0.1",
    "pymatgen~=2024.11.13",
    "scipy~=1.13.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "flake8",
    "ruff",
    "black",
    "isort",
    "pytest-cov",
    "mypy",
    "gitchangelog",
    "mkdocs",
]

[project.urls]
##"Documentation" = "https://documentation_url"
homepage = "https://github.com/xinglong-zhang/chemsmart/"
"Source" = "https://github.com/xinglong-zhang/chemsmart/"

[tool.setuptools.packages.find]
exclude = ["tests", ".github"]

[tool.flake8]
ignore = ["E226", "W503", "W504"]
extend-ignore = ["E203"]
per-file-ignores = {"__init__.py" = ["F401"]}
max-line-length = 79

[tool.ruff]
target-version = "py39"
line-length = 79
ignore = ["E226", "W503", "W504", "E203"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.isort]
profile = "black"
line-length = 79

[tool.mypy]
python_version = 3.9
strict = true
ignore_missing_imports = true
exclude = ["build", "dist", ".venv", ".ruff_cache"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["chemsmart"]

[tool.mkdocs]
site_name = "chemsmart"
theme = "readthedocs"

