[build-system]
requires = ["setuptools==74.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemsmart"
version = "0.1.0"  # Update this dynamically if needed
description = "CHEMSMART: Chemistry Simulation and Modeling Automation Toolkit"
readme = "README.md"
requires-python = "~=3.10"
authors = [{ name = "xinglong-zhang", email = "xinglong.zhang@cuhk.edu.hk" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ase==3.24.0",
    "basis_set_exchange==0.11",
    "click==8.1.8",
    "dictdiffer==0.9.0",
    "filelock",
    "joblib==1.4.2",
    "networkx==3.4.2",
    "numpy~=1.26.4",  # rdkit works with numpy 1.x not 2.x
    "pytest==8.3.4",
    "pyyaml",
    "pymatgen==2025.1.24",
    "rdkit==2024.3.2",
    "tomlkit==0.13.2",
    "types-PyYAML",
    "scipy==1.15.2",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "flake8",
    "ruff",
    "black",
    "isort",
    "pytest-cov",
    "gitchangelog",
    "mkdocs",
    "pre-commit>=3.6.0",
]

[project.urls]
##"Documentation" = "https://documentation_url"
homepage = "https://github.com/xinglong-zhang/chemsmart/"
"Source" = "https://github.com/xinglong-zhang/chemsmart/"

[tool.setuptools.packages.find]
exclude = [".github"]

[tool.flake8]
ignore = ["E226", "W503", "W504"]
extend-ignore = ["E203"]
per-file-ignores = {"__init__.py" = ["F401"]}
max-line-length = 79

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["chemsmart"]

[tool.mkdocs]
site_name = "chemsmart"
theme = "readthedocs"

